--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ python:
 install: 
   - "pip install -r requirements.txt"
   - "pip install coveralls"
-script: nosetests
+script: 
+    coverage run --source=lazyconf,lazy lazyconf/test.py
+after_success:
+    coveralls
