--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - "pip install -r requirements.txt"
   - "pip install coveralls"
 script: 
-    coverage run --source=lazyconf,lazy lazyconf/test.py
+    coverage run --source=lazyconf,lib lazyconf/test.py
 after_success:
     coveralls
